ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/Existing_Tractor_Loan_Information__c.object-meta.xml
<CustomObject>
    <label>Existing Tractor Loan Information</label>
    <nameField>
        <displayFormat>ETL-{0000}</displayFormat>
        <label>Existing Tractor Loan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing Tractor Loan Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>