ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/Field_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Field_Investigation__c</fullName>
    <label>Field Investigation</label>
    <referenceTo>Field_Investigation__c</referenceTo>
    <relationshipLabel>Existing Tractor Loan Informations</relationshipLabel>
    <relationshipName>Existing_Tractor_Loan_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>