ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/Last_EMI_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_EMI_Paid_Date__c</fullName>
    <label>Last EMI Paid Date</label>
    <type>Date</type>
</CustomField>