ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/LOAN_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>LOAN_AMOUNT__c</fullName>
    <label>LOAN AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>