ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/Loan_Free__c.field-meta.xml
<CustomField>
    <fullName>Loan_Free__c</fullName>
    <label>Loan Free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>