ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/Loan_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Loan_Stakeholders__c</fullName>
    <label>Loan Stakeholders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Unmarried Daughter</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Unmarried Sister</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>