ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/Model_Details__c.field-meta.xml
<CustomField>
    <fullName>Model_Details__c</fullName>
    <label>Model Details</label>
    <type>TextArea</type>
</CustomField>