ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/Total_Remarks_by_FI_Agent__c.field-meta.xml
<CustomField>
    <fullName>Total_Remarks_by_FI_Agent__c</fullName>
    <label>Total Remarks by FI Agent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>