ProdIND/ProdPrograms/force-app/main/default/objects/Existing_Tractor_Loan_Information__c/fields/Total_Tractor_Loan_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Total_Tractor_Loan_Stakeholders__c</fullName>
    <label>Total Tractor Loan - Stakeholders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>